# backend

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.init  docker-compose.yml  test.sh
.github/workflows/: release.yml  test.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023-04-16-075551_users/: up.sql
migrations/2023-05-30-063252_event/: down.sql  up.sql
migrations/2023-05-31-125530_event_comment_create_at/: down.sql  up.sql
migrations/2023-06-04-081002_event_comment_created_at/: down.sql  up.sql
migrations/2023-06-04-161542_event_established/: down.sql  up.sql
migrations/2023-06-06-020022_event_can_delete_when_have_msg/: down.sql  up.sql
migrations/2023-06-07-093151_event_comments_index_1/: down.sql  up.sql
src/: db.rs  db_test.rs  main.rs  models.rs  schema.rs
src/api/: event_related.rs  events.rs  identify.rs  identify_test.rs  index.rs  index_test.rs  mod.rs  types.rs  user_info.rs
