[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10.0"
actix-files = "0.6.2"
jsonwebtoken-google = "0.1.6"
actix-session = { version = "0.7.2", features = ["redis-rs-session", "cookie-session"] }